--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     margin-top: 70px;
+    font-size: 16px;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -34,4 +35,38 @@ p{
 
 #showcase .showcase-right{
     margin-top: 90px;
+}
+
+#testimonials{
+    background: #f1f1f1;
+    padding: 50px 0 30px 0;
+    text-align: center;
+    margin-top: 40px;
+}
+
+#testimonials p{
+    font-size: 32px;
+    font-family: 'Josefin Sans';
+    color:#000;
+}
+
+
+#info1 .info-right{
+    margin-top: 90px;
+}
+
+#info2{
+    margin: 20px 0 60px 0;
+}
+
+#contact{
+    background:url(../img/image3.png);
+    padding: 40px;
+    color: #fff;
+    border-top: #333 7px solid;
+    border-bottom: #333 7px solid;
+}
+
+footer{
+    padding: 40px;
 }
